--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,8 @@ description: CT4 Demo.
 author: Henrik Vendelbo
 email: henrik@thepia.com
     
-exclude: _design, Rakefile, Library, conf, mydemo.py, testing.log, templates, scss, .sass-cache
+exclude: _design, Rakefile, Library, conf, mydemo.py, testing.log, templates, scss
+#, .sass-cache
 destination: _site
 lsi: false
 pygments: true
